fix:修复api列表排序问题
