# backend/api/v1/system/sys_menu.go
@@ -62,7 +62,7 @@ func (m *MenuApi) UpdateMenuItem(c *gin.Context) {
 // @Produce   application/json
 // @Param	   data  query   request.SysMenuQuery	true "列表查询"
 // @success   200  {object}	 response.Response{data=response.PageResult,msg=string}  "分页获取列表"
-// @Router    /menu/lists [get]
+// @Router    /menu/getLists [get]
 func (m *MenuApi) GetMenuLists(c *gin.Context) {
 	//var query request.SysMenuQuery
 }
