# backend/model/system/request/sys_api.go
@@ -5,15 +5,20 @@ import (
 	"gin-pro/model/system"
 )
 
-type SysApiOrder struct {
-	ID          string `json:"id"`
-	Path        string `json:"path"`
-	BgGroup     string `json:"bgGroup"`
-	Description string `json:"description"`
-	Method      string `json:"method"`
+type OrderItem struct {
+	Field string `json:"field"`
+	Value string `json:"value"`
 }
+
+//	type SysApiOrder struct {
+//		Id          string `json:"id"`
+//		Path        string `json:"path"`
+//		Category    string `json:"category"`
+//		Description string `json:"description"`
+//		Method      string `json:"method"`
+//	}
 type SysApiQuery struct {
 	request.PageQuery
 	system.SysApi
-	Order SysApiOrder `json:"order" gorm:"comment:排序查询"` //排序查询
+	Order []OrderItem `json:"order" gorm:"comment:排序查询"` //排序查询
 }
